<resources>
    <string name="app_name">CriminalIntent</string>

    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="contact_police">Contact Police</string>
    <string name="crime_solved_image_view">Crime Solved ImageView</string>
    <string name="crime_requires_police_label">Requires Police</string>
</resources>
